tests/transpiler/x/hs/list_nested_assign.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 21:29:06 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
matrix = 5

main :: IO ()
main = do
    putStrLn (unwords (map show (matrix !! 1 !! 0)))
